--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           "時制": "pdfs/dummy.pdf",
           "助動詞": "pdfs/dummy.pdf",
           "受動態": "pdfs/dummy.pdf",
-          "不定詞": "pdfs/dummy.pdf",
+          "不定詞": "pdfs/不定詞.pdf",
           "動名詞": "pdfs/dummy.pdf",
           "分詞": "pdfs/dummy.pdf",
           "関係詞": "pdfs/dummy.pdf",
