--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         grammer: {
           "文構造と文型": "pdfs/文型.pdf",
           "時制": "pdfs/dummy.pdf",
-          "助動詞": "pdfs/dummy.pdf",
-          "受動態": "pdfs/dummy.pdf",
+          "助動詞": "pdfs/助動詞.pdf",
+          "受動態": "pdfs/受動態.pdf",
           "不定詞": "pdfs/不定詞.pdf",
-          "動名詞": "pdfs/dummy.pdf",
-          "分詞": "pdfs/dummy.pdf",
-          "関係詞": "pdfs/dummy.pdf",
-          "仮定法": "pdfs/dummy.pdf",
-          "比較": "pdfs/dummy.pdf",
-          "前置詞": "pdfs/dummy.pdf",
-          "接続詞": "pdfs/dummy.pdf",
-          "強調・倒置": "pdfs/dummy.pdf",
-          "語法・構文": "pdfs/dummy.pdf"
+          "動名詞": "pdfs/動名詞.pdf",
+          "分詞": "pdfs/分詞.pdf",
+          "関係詞": "pdfs/関係詞.pdf",
+          "仮定法": "pdfs/仮定法.pdf",
+          "比較": "pdfs/比較.pdf",
+          "前置詞": "pdfs/前置詞.pdf",
+          "接続詞": "pdfs/接続詞.pdf",
+          "強調・倒置": "pdfs/倒置.pdf",
+          "語法・構文": "pdfs/語法.pdf"
         },
         reading: {
           "長文読解": "pdfs/dummy.pdf"
@@ -40,35 +40,41 @@
       },
       数学: {
         数学I: {
-          "数と式": "pdfs/dummy.pdf",
-          "図形と計量": "pdfs/dummy.pdf",
-          "二次関数": "pdfs/dummy.pdf",
-          "データの分析": "pdfs/dummy.pdf"
+          "数と式": "pdfs/数と式.pdf",
+          "図形と計量": "pdfs/計量.pdf",
+          "二次関数": "pdfs/二次関数.pdf",
+          "データの分析": "pdfs/データ.pdf"
         },
         数学A: {
-          "場合の数と確率": "pdfs/dummy.pdf",
-          "図形の性質": "pdfs/dummy.pdf",
-          "整数の性質": "pdfs/dummy.pdf"
+          "場合の数と確率": "pdfs/確率.pdf",
+          "図形の性質": "pdfs/図形.pdf",
+          "整数の性質": "pdfs/整数.pdf"
         },
         数学II: {
-          "式と証明": "pdfs/dummy.pdf",
-          "図形と方程式": "pdfs/dummy.pdf",
-          "指数・対数": "pdfs/dummy.pdf",
-          "三角関数": "pdfs/dummy.pdf",
-          "微積": "pdfs/dummy.pdf"
+          "式と証明": "pdfs/式と証明.pdf",
+          "図形と方程式": "pdfs/図形方程式.pdf",
+          "指数・対数": "pdfs/指数対数.pdf",
+          "三角関数": "pdfs/三角関数.pdf",
+          "微積": "pdfs/微積.pdf"
         },
         数学B: {
-          "数列": "pdfs/dummy.pdf",
-          "確率統計": "pdfs/dummy.pdf"
+          "数列": "pdfs/数列.pdf",
+          "確率統計": "pdfs/統計.pdf"
         },
         数学C: {
-          "複素数平面": "pdfs/dummy.pdf",
-          "ベクトル": "pdfs/dummy.pdf"
+          "複素数平面": "pdfs/複素数.pdf",
+          "ベクトル": "pdfs/ベクトル.pdf"
         },
         数学III: {
-          "極限": "pdfs/dummy.pdf",
-          "微分法": "pdfs/dummy.pdf",
-          "積分法": "pdfs/dummy.pdf"
+          "極限": "pdfs/極限.pdf",
+          "微分法": "pdfs/微分法.pdf",
+          "積分法": "pdfs/積分法.pdf"
+        },
+        数学演習: {
+          "数Ⅰ": "pdfs/数と式.pdf",
+          "図形と計量": "pdfs/計量.pdf",
+          "二次関数": "pdfs/二次関数.pdf",
+          "データの分析": "pdfs/データ.pdf"
         }
       },
       物理: {
