--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
           "語法・構文": "pdfs/語法.pdf"
         },
         reading: {
-          "長文読解": "pdfs/dummy.pdf"
+          "言語の迷宮①": "pdfs/言語の迷宮-1.pdf",
+          "言語の迷宮②": "pdfs/言語の迷宮-2.pdf",
+          "言語の迷宮③": "pdfs/言語の迷宮-3.pdf",
+          "言語の迷宮④": "pdfs/言語の迷宮-4.pdf",
+          "言語の迷宮⑤": "pdfs/言語の迷宮-5.pdf",
+          "言語の迷宮⑥": "pdfs/言語の迷宮-6.pdf",
+          "言語の迷宮⑦": "pdfs/言語の迷宮-7.pdf",
+          "言語の迷宮⑧": "pdfs/言語の迷宮-8.pdf",
+          "言語の迷宮⑨": "pdfs/言語の迷宮-9.pdf",
+          "言語の迷宮⑩": "pdfs/言語の迷宮-10.pdf",
+          "言語の迷宮⑪": "pdfs/言語の迷宮-11.pdf",
+          "言語の迷宮⑫": "pdfs/言語の迷宮-12.pdf"
         }
       },
       数学: {
