--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
           "言語の迷宮⑨": "pdfs/言語の迷宮-9.pdf",
           "言語の迷宮⑩": "pdfs/言語の迷宮-10.pdf",
           "言語の迷宮⑪": "pdfs/言語の迷宮-11.pdf",
-          "言語の迷宮⑫": "pdfs/言語の迷宮-12.pdf"
+          "言語の迷宮⑫": "pdfs/言語の迷宮-12.pdf",
+          "言語の迷宮" : "pdfs/ロボット機構学.pdf"
         }
       },
       数学: {
