--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
         原子: {
           "電子": "pdfs/dummy.pdf",
           "放射線と核反応": "pdfs/dummy.pdf"
+        },
+        流体力学: {
+          "1": "pdfs/流体力学1.pdf",
+          "2": "pdfs/流体力学2.pdf",
+          "3": "pdfs/流体力学3.pdf",
+          "4": "pdfs/流体力学4.pdf",
+          "5": "pdfs/流体力学5.pdf"
         }
       }
     };
